# sub

./: CMakeLists.txt  package.xml  setup.py
install/: local_setup.sh  setup.sh
install/sub/lib/sub/: objetivo  pid.py  posicion.py
install/sub/local/lib/python3.10/dist-packages/sub-0.0.0-py3.10.egg-info/: PKG-INFO
install/sub/local/lib/python3.10/dist-packages/sub/install/: setup.zsh
install/sub/local/lib/python3.10/dist-packages/sub/log/: latest_build
install/sub/share/ament_index/resource_index/parent_prefix_path/: sub
install/sub/share/sub/: local_setup.sh  package.sh
install/sub/share/sub/launch/: launch.launch.xml
install/sub/share/sub/rviz/: pid.rviz  rivz.rviz
launch/: cuadrado_launch.xml  launch.launch.xml  teleop_launch.xml
libs/src/install/: local_setup.sh  setup.sh
libs/src/log/: latest_build
libs/src/models/install/: local_setup.sh  setup.bash  setup.sh
libs/src/models/log/: latest_build
log/: latest_build
rviz/: pid.rviz
src/: dynamic_model_uuv.cpp  joystick.py  maquina_estados_1.py  objetivo.cpp  objetivo.py  pid.py  posicion.cpp  posicion.py  trayectoria.py  trayectoria2.py  visualizador.py
src/misiones/cuadrado/: obj_cuadrado_1.py  obj_cuadrado_2.py  obj_cuadrado_3.py  obj_cuadrado_4.py
sub/install/: local_setup.sh
urdf/: modelo.urdf
